--- a/style.css
+++ b/style.css
@@ -87,10 +87,11 @@ nav {
     display: flex;
     font-size: var(--px15);
     text-decoration: none;
-    color: var(--secondary-text);
+    color: var(--primary-text-and-dark-bg);
 }
 
-nav button {
+.navbar__close-box {
+    width: 100%;
     display: none;
 }
 
@@ -330,7 +331,6 @@ nav button {
     }
 
     nav {
-        display: none;
         width: 70%;
         position: fixed;
         top: 0;
@@ -349,8 +349,8 @@ nav button {
         margin-left: 1.5rem;
         margin-bottom: 1.75rem;
     }
-    
-    nav button {
+
+    .navbar__close-box {
         width: 100%;
         display: block;
     }
@@ -377,7 +377,6 @@ nav button {
 
     .navabar__list__item__link {
         font-size: 1rem;
-        color: var(--primary-text-and-dark-bg);
     }
 }
 
